# brokkoli

./: .gitignore  Cargo.toml  README.md  deploy-testing.sh
src/: camera.rs  control.rs  db.rs  index.html  main.rs  sensor.rs  session.rs
static/: script.js
templates/: base.html  index.html
