[package]
name = "brokkoli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
awc = "3.4.0"
askama = { version = "0.12.1", default-features = false, features = ["with-actix-web"] }
askama_actix = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
